# gsplines_moveit

./: .clang-tidy  .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
docker/: build_image.bash  build_image.bat  container-start.bash  container-start.bat  docker.dockerfile  image.dockerfile
gsplines_moveit/: CMakeLists.txt  gsplines_adapter_plugins.xml  package.xml
gsplines_moveit/cfg/: MinimumSobolevSeminormDynamicReconfigure.cfg
gsplines_moveit/config/: control_lists.yaml  franka_control.yaml  gsplines_moveit_controllers.yaml  ompl_planning.yaml  panda_controllers.yaml  rosconsole.config  rviz_config.rviz
gsplines_moveit/include/gsplines_moveit/: GSplinesControllerHandler.hpp  MinimumCrackleAdapter.hpp  MinimumCrankAdapter.hpp  MinimumJerkAdapter.hpp  MinimumSnapAdapter.hpp  MinimumSobolevSeminormAdapter.hpp  gsplines_moveit.hpp
gsplines_moveit/launch/: example.launch  gsplines_moveit_controller_manager.launch.xml  opt_stop_example.launch  panda_moveit_config_example.launch  panda_moveit_config_gspline_control_example.launch  trajectory_execution.launch.xml
gsplines_moveit/src/: GSplinesControllerHandler.cpp  GSplinesControllerManager.cpp  MinimumJerkAdapter.cpp  MinimumSobolevSeminorm.cpp  MinimumSobolevSeminormAdapter.cpp  gsplines_moveit.cpp
