<?xml version="1.0"?>
<package format="2">
    <name>gsplines_moveit</name>
    <version>0.0.0</version>
    <description>The gsplines_moveit package</description>
    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="rafaelrojasmiliani@gmail.com">Rafael A. Rojas</maintainer>
    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>Eigen3</build_depend>
    <build_depend>gsplines_msgs</build_depend>
    <build_depend>gsplines_ros</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>Eigen3</build_export_depend>
    <build_export_depend>gsplines_msgs</build_export_depend>
    <build_export_depend>gsplines_ros</build_export_depend>
    <build_export_depend>moveit_core</build_export_depend>
    <build_export_depend>moveit_ros_planning_interface</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>Eigen3</exec_depend>
    <exec_depend>gsplines_msgs</exec_depend>
    <exec_depend>gsplines_ros</exec_depend>
    <exec_depend>moveit_core</exec_depend>
    <exec_depend>moveit_ros_planning_interface</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <depend>rospy</depend>
    <depend>dynamic_reconfigure</depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <moveit_core plugin="${prefix}/gsplines_adapter_plugins.xml" />
    </export>
</package>
